# ThorsSlack

./: .gitignore  config.h.in  configure  configure.ac
src/: Makefile
src/ThorsSlack/: Makefile  ThorsSlack.cpp  ThorsSlack.h
